[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hey-py"
version = "0.2.0"
description = "A command-line tool to interact with Duck.AI from terminal"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Utilities",
]
dependencies = [
    "httpx[socks]<0.28,>=0.24.1",
    "toml>=0.10.2",
    "rich>=13.7.0",
    "InquirerPy",
]

[project.scripts]
hey = "hey.main:main"

[tool.isort]
line_length = 99
